# mapper-framework-c

./: CMakeLists.txt  DOCKERFILE  README.md  config.yaml  main.c  register.cpp  register_test
common/: configmaptype.h  event.c
config/: config.c  config.h
data/dbmethod/influxdb2/: handler.c  influxdb2_client.c  influxdb2_client.h
data/dbmethod/mysql/: handler.c  mysql_client.c  mysql_client.h  recorder.c  recorder.h
data/dbmethod/redis/: handler.c  redis_client.c  redis_client.h
data/dbmethod/tdengine/: handler.c  tdengine_client.c  tdengine_client.h
data/publish/: publisher.c  publisher.h
data/publish/http/: http_publisher.c  http_publisher.h
data/publish/mqtt/: mqtt_publisher.c  mqtt_publisher.h
data/publish/otel/: otel_publisher.c  otel_publisher.h
data/stream/: stream.c
device/: dev_panel.c  dev_panel.h  device.c  device.h  devicestatus.c  devicestatus.h  devicetwin.c  devicetwin.h
driver/: devicetype.h  driver.c  driver.h
global/: global.c  global.h
grpcclient/: register.cc  register.h  report.cpp
grpcserver/: device.c  device.cpp  device.h  server.cc  server.cpp  server.h
httpserver/: httpserver.c  httpserver.h
test/: config_test.c  device_test.c  grpc_test.c  http_test.c  log_test.c  mysql_test.c  register_test.c  register_test.cpp  stream_test.c
util/parse/: grpc.c  grpc.h
